--- a/package.json
+++ b/package.json
@@ -25,13 +25,16 @@
 		"svelte-hero-icons": "^4.1.3",
 		"svelte-preprocess": "^4.10.7",
 		"tailwindcss": "^3.1.5",
-		"vite": "^4.0.0"
+		"vite": "^4.0.0",
+		"yup": "^0.32.11"
 	},
 	"type": "module",
 	"dependencies": {
+		"dotenv": "^16.0.3",
 		"node-base64-image": "^2.0.4",
 		"pocketbase": "^0.9.1",
 		"puppeteer": "^19.5.2",
+		"svelte-french-toast": "^1.0.3",
 		"svelte-portal": "^2.2.0",
 		"svelte-time": "^0.7.1"
 	}
